# DocQA-Agent

./: README.md
DocQA Agent/: CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
DocQA Agent/data/faiss/: docs.pkl
DocQA Agent/src/: __init__.py
DocQA Agent/src/agent/: loop.py  tools.py
DocQA Agent/src/cli/: main.py
DocQA Agent/src/ingestion/: __init__.py  chunker.py  loader.py
DocQA Agent/src/llm/: __init__.py  client.py
DocQA Agent/src/retrieval/: __init__.py  bm25_store.py  hybrid_retriever.py  vector_store.py
DocQA Agent/tests/: __init__.py  test_agent.py  test_retrieval.py
